--- a/index.html
+++ b/index.html
@@ -17,5 +17,5 @@ La douceur du café à vos heures!
     <img src="https://cdn.pixabay.com/photo/2015/06/24/01/15/morning-819362_1280.jpg">
   <a href="...c"></a>
  
- <body>      
+ </body>      
 </html>
